--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,15 +11,15 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/estilo.css" />
-    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/estilo.css" />
+    <link rel="shortcut icon" href="/imagens/favicon.png" type="image/x-icon" />
   </head>
 
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-          <img src="imagens/efêmera-logo.png" alt="Agência Efêmera" />
+          <img src="/imagens/efêmera-logo.png" alt="Agência Efêmera" />
         </a>
         <button
           class="navbar-toggler"
